<resources>
    <string name="app_name">StayConnected</string>

    <!-- USER AUTH DETAILS -->
    <string name="text_user_name">Your Name</string>
    <string name="text_user_mobile">Mobile Number</string>
    <string name="text_user_email">Email</string>
    <string name="text_user_password">Password</string>
    <string name="text_user_sign_in">SIGN IN</string>
    <string name="text_user_registration">REGISTER</string>
    <string name="text_forget_password">Forget Password?</string>
    <string name="text_skip_now">Skip for now</string>
    <string name="text_agree_terms_condition">By continuing, you agree to out \n Terms of Service &#38; Privacy Policy</string>

    <!-- OTP VERIFICATION -->
    <string name="text_otp_title">Registration almost done!\nPlease enter the code we\njust sent you</string>
    <string name="text_otp_invalid">Incorrect Code</string>
    <string name="text_otp">OTP</string>

    <!-- USER INVITATION -->
    <string name="text_invite_user_title">Invite your Companions to\nConnected Life</string>
    <string name="text_invite_user_name">Name</string>
    <string name="text_search_contact">SEARCH CONTACTS</string>
    <string name="text_search_hint">Search</string>
    <string name="text_user_invitation_msg_content">Hi %1$s, I would like you to join me on Connected Life! Please download the CoLife app and accept my invitation: url</string>

    <!-- UPLOAD AVATAR -->
    <string name="text_avatar_upload_title">Account Created!\nAdd your Profile Photo</string>
    <string name="text_avatar_update">UPDATE PHOTO</string>

    <!-- BUTTON TEXTS-->
    <string name="text_btn_sign_in">Sign In</string>
    <string name="text_btn_register">Register</string>
    <string name="text_btn_resend_otp">Resend code</string>
    <string name="text_btn_verify_otp">Verify</string>
    <string name="text_btn_invite">Invite</string>
    <string name="text_btn_next">Next</string>
    <string name="text_btn_ok">Ok</string>
    <string name="text_btn_setting">Setting</string>
    <string name="text_btn_cancel">Cancel</string>

    <!-- VALIDATION TEXTS-->
    <string name="text_loading">Loading</string>
    <string name="text_empty_field">Empty Field</string>
    <string name="text_invalid_user_name">Invalid name</string>
    <string name="text_invalid_user_email">Invalid Email</string>
    <string name="text_invalid_user_number">Invalid Number</string>
    <string name="text_invalid_user_password">Incorrect Password</string>
    <string name="text_user_acc_not_found">Account Not Found</string>


    <!-- ALERT MESSAGE -->
    <string name="text_alert_user_registered_already">User already registered with this email id or mobile number</string>
    <string name="text_alert_user_registration_error">Error registering user. Please try again later.</string>
    <string name="text_alert_verify_otp_error">Error verifying OTP. Please click on RESEND CODE and try again.</string>
    <string name="text_alert_resend_otp_error">Error resending OTP. Please click on RESEND CODE and try again.</string>
    <string name="text_alert_otp_resend_success">OTP will be send to registered mobile number.</string>
    <string name="text_alert_user_login_error">Error signin user. Please try again later.</string>
    <string name="text_alert_user_need_contact_permission">App need permission to access the phone contacts</string>


</resources>
