<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stay.connected.ui.fragment.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_name"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>

        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_email"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>


        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_mobile"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_mobile"
                android:inputType="phone"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>

        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edt_password"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_password"
                android:inputType="textPassword"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/text_agree_terms_condition"
            android:textColor="@color/color_grey" />

        <Button
            android:id="@+id/btn_register"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_register"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_btn_register"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/tv_skip_now"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_skip_now"
            android:textColor="@color/color_white" />

    </LinearLayout>
</RelativeLayout>
