<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.stay.connected.ui.VerifyOtpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/line_spacing_title"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4dp"
        android:text="@string/text_invite_user_title"
        android:textColor="@color/color_white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="false">

            <EditText
                android:id="@+id/edt_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_invite_user_name"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>

        <com.stay.connected.widget.AppTextInputLayout
            android:id="@+id/input_lay_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:theme="@style/AppTextInputLayoutTheme"
            app:errorEnabled="false">

            <EditText
                android:id="@+id/edt_mobile"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_mobile"
                android:inputType="phone"
                android:textColor="@color/color_white"
                android:theme="@style/AppEditTextTheme" />

        </com.stay.connected.widget.AppTextInputLayout>

        <Button
            android:id="@+id/btn_search_contact"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@android:color/transparent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_search_contact"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_invite"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_invite"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/text_btn_invite"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/tv_skip_now"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_skip_now"
            android:textColor="@color/color_grey" />

    </LinearLayout>


</RelativeLayout>
