<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/app"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stay.connected.ui.VerifyOtpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/line_spacing_title"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4dp"
        android:text="@string/text_otp_title"
        android:textColor="@color/color_white" />


    <EditText
        android:id="@+id/edt_otp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        android:theme="@style/AppEditTextTheme" />

    <TextView
        android:id="@+id/tv_otp_error"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_otp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/text_otp_invalid"
        android:textColor="@color/color_accent"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_resend"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_mid_grey"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/text_btn_resend_otp"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/btn_verify"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_light_green"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/text_btn_verify_otp"
            android:textColor="@color/color_white" />
    </LinearLayout>

</RelativeLayout>
